--- a/config/rapr.yaml
+++ b/config/rapr.yaml
@@ -1,4 +1,4 @@
 
-sample_info: "data/sample_info_lib2.tsv"
+sample_info: "rapr-ddrad-smk/data/sample_info_lib2.tsv"
 
-popmap: "data/popmap_lib2_6frogs.tsv"
+popmap: "rapr-ddrad-smk/data/popmap_lib2_6frogs.tsv"
