add note to config file specifying that it is for Ovis

--- a/slurm_config/config.yaml
+++ b/slurm_config/config.yaml
@@ -1,3 +1,4 @@
+# config.yaml for Ovis
 
 # This first part of the config.yaml is borrowed from Eric Anderson's config file
 executor: cluster-generic
