--- a/slurm_config/config.yaml
+++ b/slurm_config/config.yaml
@@ -12,6 +12,8 @@ cluster-generic-submit-cmd:
     --output=results/slurm_logs/{rule}/{rule}-%j-{wildcards}.out
     --error=results/slurm_logs/{rule}/{rule}-%j-{wildcards}.err
     --parsable
+    --mail-type=FAIL
+    --mail-user=Chris.Funk@colostate.edu
 cluster-generic-status-cmd: status-sacct-robust.sh
 cluster-generic-cancel-cmd: scancel
 cluster-generic-cancel-nargs: 400
