edited slurm config file

--- a/slurm_config/config.v8+.yaml
+++ b/slurm_config/config.v8+.yaml
@@ -20,7 +20,9 @@ default-resources:
   - time="08:00:00"
   - mem_mb=7800
   - tmpdir="results/snake-tmp"
-NodeName=DEFAULT CPUs=30 RealMemory=300000
+resources:
+  - cpus=30
+  - mem_mb=300000
 restart-times: 0
 max-jobs-per-second: 10
 max-status-checks-per-second: 25
