revised directories in slurm config file

--- a/slurm_config/lib2_6frogs/config.v8+.yaml
+++ b/slurm_config/lib2_6frogs/config.v8+.yaml
@@ -2,7 +2,7 @@
 
 executor: cluster-generic
 cluster-generic-submit-cmd:
-  mkdir -p results/slurm_logs/{rule} &&
+  mkdir -p results/lib2_6frogs/slurm_logs/{rule} &&
   sbatch
     --cpus-per-task={threads}
     --mem={resources.mem_mb}
@@ -19,7 +19,7 @@ cluster-generic-cancel-nargs: 4000
 default-resources:
   - time="08:00:00"
   - mem_mb=3740
-  - tmpdir="results/snake-tmp"
+  - tmpdir="results/lib2_6frogs/snake-tmp"
 restart-times: 0
 max-jobs-per-second: 10
 max-status-checks-per-second: 50
