--- a/envs/stacks.yaml
+++ b/envs/stacks.yaml
@@ -4,5 +4,4 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - stacks=2.65=hdcf5f25_0
-prefix: /projects/wcfunk@colostate.edu/mambaforge/envs/stacks2.65
+  - stacks=2.65-0
