changed to use-conda: True (rather than software-deployment-method: conda) in slurm config file

--- a/slurm_config/lib2_6frogs/config.v8+.yaml
+++ b/slurm_config/lib2_6frogs/config.v8+.yaml
@@ -29,5 +29,5 @@ jobs: 450
 keep-going: True
 rerun-incomplete: True
 printshellcmds: True
-software-deployment-method: conda
+use-conda: True
 rerun-trigger: mtime
