--- a/slurm_config/lib2_6frogs/config.v8+.yaml
+++ b/slurm_config/lib2_6frogs/config.v8+.yaml
@@ -12,6 +12,7 @@ cluster-generic-submit-cmd:
     --output=results/lib2_6frogs/slurm_logs/{rule}/{rule}-%j-{wildcards}.out
     --error=results/lib2_6frogs/slurm_logs/{rule}/{rule}-%j-{wildcards}.err
     --parsable
+    --qos=long
 cluster-generic-status-cmd: status-sacct-robust.sh
 cluster-generic-cancel-cmd: scancel
 cluster-generic-cancel-nargs: 4000
