ustacks.smk and slurm config: revised based on Eric's advice on 5/15/2024

--- a/slurm_config/lib2_6frogs/config.v8+.yaml
+++ b/slurm_config/lib2_6frogs/config.v8+.yaml
@@ -4,10 +4,11 @@ executor: cluster-generic
 cluster-generic-submit-cmd:
   mkdir -p results/lib2_6frogs/slurm_logs/{rule} &&
   sbatch
-    --partition=amilan,csu
+    --partition=aa100,csu
     --cpus-per-task={threads}
     --mem={resources.mem_mb}
     --time={resources.time}
+    --qos={resources.qos}
     --job-name=smk-{rule}-{wildcards}
     --output=results/lib2_6frogs/slurm_logs/{rule}/{rule}-%j-{wildcards}.out
     --error=results/lib2_6frogs/slurm_logs/{rule}/{rule}-%j-{wildcards}.err
@@ -18,6 +19,7 @@ cluster-generic-cancel-nargs: 4000
 default-resources:
   - time="08:00:00"
   - mem_mb=3740
+  - qos="normal"
   - tmpdir="results/lib2_6frogs/snake-tmp"
 restart-times: 0
 max-jobs-per-second: 10
