--- a/slurm_config/lib2_6frogs/config.v8+.yaml
+++ b/slurm_config/lib2_6frogs/config.v8+.yaml
@@ -4,7 +4,7 @@ executor: cluster-generic
 cluster-generic-submit-cmd:
   mkdir -p results/lib2_6frogs/slurm_logs/{rule} &&
   sbatch
-    --partition=amilan,csu
+    --partition=aa100
     --cpus-per-task={threads}
     --mem={resources.mem_mb}
     --time={resources.time}
